Fix to vertical scroll being locked on iOS, disable AOS animations on mobile

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -606,6 +606,14 @@ textarea:focus-visible {
 }
 
 @media only screen and (max-width: 767px) {
+  /* Disable aos animations on mobile */
+
+  [data-aos] {
+    opacity: 1 !important;
+    transition: none !important;
+    transform: none !important;
+  }
+
   #contentMore {
     display: none;
   }
